--- a/05-infer/02-lesson/05-02-lesson.Rmd
+++ b/05-infer/02-lesson/05-02-lesson.Rmd
@@ -72,7 +72,7 @@ knitr::include_graphics("images/2-1-3.png")
 
 ### 
 
-We assert this hypothesis, this model of the true state of the word, using hypothesize.
+We assert this hypothesis, this model of the true state of the world, using hypothesize.
 
 ```{r echo=FALSE, out.width = "60%"}
 knitr::include_graphics("images/2-1-4.png")
