Added pacman::p_load to setup chunk to install any missing packages needed for the tutorials. This will allow users who download the code to run the documents from within Rstudio without worrying about not having the needed packages.
Issue #6 would address this better, but this will make things a little smoother in the meantime.

--- a/02-explore/04-lesson/02-04-lesson.Rmd
+++ b/02-explore/04-lesson/02-04-lesson.Rmd
@@ -8,6 +8,9 @@ runtime: shiny_prerendered
 ---
 
 ```{r setup, message = FALSE,warning = FALSE,	include = FALSE}
+if (!require("pacman")) install.packages("pacman",repos = "http://cran.us.r-project.org")
+pacman::p_load(knitr, grid, learnr, kableExtra, tidyverse, emo, ggplot2, patchwork, openintro, gapminder)
+
 library(learnr)
 library(tidyverse)
 library(openintro)
