--- a/03-model/05-lesson/03-05-lesson.Rmd
+++ b/03-model/05-lesson/03-05-lesson.Rmd
@@ -9,6 +9,8 @@ runtime: shiny_prerendered
 
 ```{r setup, message=FALSE, warning=FALSE, include=FALSE}
 # load packages ----------------------------------------------------------------
+if (!require("pacman")) install.packages("pacman",repos = "http://cran.us.r-project.org")
+pacman::p_load(knitr, learnr, tidyverse, openintro, grid, png, emo, ggplot2, broom, Lahman)
 
 library(learnr)
 library(broom)
