--- a/06-model-infer/05-lesson/06-05-lesson.Rmd
+++ b/06-model-infer/05-lesson/06-05-lesson.Rmd
@@ -8,6 +8,9 @@ runtime: shiny_prerendered
 ---
 
 ```{r setup, include=FALSE}
+if (!require("pacman")) install.packages("pacman",repos = "http://cran.us.r-project.org")
+pacman::p_load(knitr, learnr, tidyverse, openintro, emo, ggplot2, infer, broom, GGally)
+
 library(learnr)
 library(openintro)
 library(broom)
