--- a/03-model/07-lesson/03-07-lesson.Rmd
+++ b/03-model/07-lesson/03-07-lesson.Rmd
@@ -10,6 +10,8 @@ runtime: shiny_prerendered
 
 ```{r setup, include=FALSE}
 # load packages ----------------------------------------------------------------
+if (!require("pacman")) install.packages("pacman",repos = "http://cran.us.r-project.org")
+pacman::p_load(knitr, learnr, tidyverse, openintro, grid, png, emo, ggplot2, broom, mosaicData)
 
 library(learnr)
 library(openintro)
