--- a/03-model/09-lesson/03-09-lesson.Rmd
+++ b/03-model/09-lesson/03-09-lesson.Rmd
@@ -9,6 +9,8 @@ runtime: shiny_prerendered
 
 ```{r setup, include=FALSE}
 # load packages ----------------------------------------------------------------
+if (!require("pacman")) install.packages("pacman",repos = "http://cran.us.r-project.org")
+pacman::p_load(knitr, learnr, tidyverse, openintro, grid, png, emo, ggplot2, broom, Stat2Data)
 
 library(learnr)
 library(openintro)
