--- a/04-foundations/01-lesson/04-01-lesson.Rmd
+++ b/04-foundations/01-lesson/04-01-lesson.Rmd
@@ -11,6 +11,8 @@ runtime: shiny_prerendered
 set.seed(470)
 
 # load packages ----------------------------------------------------------------
+if (!require("pacman")) install.packages("pacman",repos = "http://cran.us.r-project.org")
+pacman::p_load(knitr, learnr, tidyverse, openintro, grid, emo, ggplot2, infer, NHANES)
 
 library(learnr)
 library(NHANES)
