--- a/05-infer/08-lesson/05-08-lesson.Rmd
+++ b/05-infer/08-lesson/05-08-lesson.Rmd
@@ -587,7 +587,7 @@ So far we've introduced ANOVA as a method for comparing many means to each other
 ### Which means differ?
 
 What we're talking about is performing lots and lots of $t$-test, testing which of the groups are different. Unfortunately, performing lots and lots of hypothesis test has some major downsides. The main one we are worried about is the inflation in the Type I error rate. 
-If you remember back to the [Errors in hypothesis testing tutorial](https://openintro.shinyapps.io/ims-05-introduction-to-statistical-inference-03), a Type I error is when we reject the null hypothesis when it is true. We specify a threshold for the percentage of times we are willing to make this type of error by selecting an $\alpha$. So, an $\alpha$ of 0.05, says we are willing to make a Type I error 5% of the time. 
+If you remember back to the [Errors in hypothesis testing tutorial](https://openintro.shinyapps.io/ims-04-foundations-03), a Type I error is when we reject the null hypothesis when it is true. We specify a threshold for the percentage of times we are willing to make this type of error by selecting an $\alpha$. So, an $\alpha$ of 0.05, says we are willing to make a Type I error 5% of the time. 
 
 If we think about performing multiple $t$-tests all at a 5% significance level, then our error rate begins to grow. Specifically, if we perform 10 tests all with an $\alpha$ of 0.05, the probability of not making a Type I error for each test is $(1- \alpha)$. If we then compute the overall probability of not making a Type I error we'd have $1 - (1- \alpha)^n \approx n \cdot \alpha.$ For 10 tests at a $\alpha$ of 0.05, the probability of not making a Type I error is approximately 50%. That's not very unlikely!  
 
@@ -721,14 +721,14 @@ What's next?
 
 `r emo::ji("ledger")` [Full list of tutorials supporting OpenIntro::Introduction to Modern Statistics](https://openintrostat.github.io/ims-tutorials/)
 
-`r emo::ji("spiral_notepad")` [Tutorial 7: Inference for Numerical Responses](https://openintrostat.github.io/ims-tutorials/07-inference-for-numerical-responses/)
+`r emo::ji("spiral_notepad")` [Tutorial 7: Inference for Numerical Responses](https://openintrostat.github.io/ims-tutorials/05-infer/)
 
-`r emo::ji("one")` [Tutorial 7 - Lesson 1: Bootstrapping for estimating a parameter](https://openintro.shinyapps.io/ims-07-inference-for-numerical-responses-01/)
+`r emo::ji("one")` [Tutorial 7 - Lesson 1: Bootstrapping for estimating a parameter](https://openintro.shinyapps.io/ims-05-infer-01/)
 
-`r emo::ji("two")` [Tutorial 7 - Lesson 2: Introducing the t-distribution](https://openintro.shinyapps.io/ims-07-inference-for-numerical-responses-02/)
+`r emo::ji("two")` [Tutorial 7 - Lesson 2: Introducing the t-distribution](https://openintro.shinyapps.io/ims-05-infer-02/)
 
-`r emo::ji("three")` [Tutorial 7 - Lesson 3: Inference for difference in two parameters](https://openintro.shinyapps.io/ims-07-inference-for-numerical-responses-03/)
+`r emo::ji("three")` [Tutorial 7 - Lesson 3: Inference for difference in two parameters](https://openintro.shinyapps.io/ims-05-infer-03/)
 
-`r emo::ji("four")` [Tutorial 7 - Lesson 4: Comparing many means](https://openintro.shinyapps.io/ims-07-inference-for-numerical-responses-04/)
+`r emo::ji("four")` [Tutorial 7 - Lesson 4: Comparing many means](https://openintro.shinyapps.io/ims-05-infer-04/)
 
 `r emo::ji("open_book")` [Learn more at Introduction to Modern Statistics](http://openintro-ims.netlify.app/)
