--- a/01-data/01-lesson/01-01-lesson.Rmd
+++ b/01-data/01-lesson/01-01-lesson.Rmd
@@ -24,7 +24,7 @@ avg_read <- mean(hsb2$read)
 
 ## Welcome
 
-Hello, and welcome to **Getting Started with Data**!
+Hello, and welcome to **Introduction to data**!
 
 In this tutorial we will take you through concepts and R code that are essential for getting started with data analysis.
 
@@ -707,13 +707,13 @@ ggplot(email50, aes(x = num_char, y = exclaim_mess, color = factor(spam))) +
 
 ## Congratulations!
 
-You have successfully completed Lesson 1 in Tutorial 1: Getting Started with Data.
+You have successfully completed Lesson 1 in Tutorial 1: Introduction to data.
 
 What's next?
 
 `r emo::ji("ledger")` [Full list of tutorials supporting OpenIntro::Introduction to Modern Statistics](https://openintrostat.github.io/ims-tutorials/)
 
-`r emo::ji("spiral_notepad")` [Tutorial 1: Getting Started with Data](https://openintrostat.github.io/ims-tutorials/01-data/)
+`r emo::ji("spiral_notepad")` [Tutorial 1: Introduction to data](https://openintrostat.github.io/ims-tutorials/01-data/)
 
 `r emo::ji("one")` [Tutorial 1 - Lesson 1: Language of data](https://openintro.shinyapps.io/ims-01-data-01/)
 
