--- a/01-data/04-lesson/01-04-lesson.Rmd
+++ b/01-data/04-lesson/01-04-lesson.Rmd
@@ -234,7 +234,7 @@ ggplot(evals, aes(x = bty_avg, y = score, color = cls_type)) +
 
 ## Congratulations!
 
-You have successfully completed all of the lessons in Tutorial 1: Getting Started with Data.
+You have successfully completed all of the lessons in Tutorial 1: Introduction to data.
 
 You now know how to get started with data analysis! In this tutorial you have learned concepts and terminology related to study design and the first steps of working with a dataset. We have also laid the foundation for using certain R packages, like dplyr for data wrangling and ggplot2 for data visualization.
 
@@ -244,7 +244,7 @@ What's next?
 
 `r emo::ji("ledger")` [Full list of tutorials supporting OpenIntro::Introduction to Modern Statistics](https://openintrostat.github.io/ims-tutorials/)
 
-`r emo::ji("spiral_notepad")` [Tutorial 1: Getting Started with Data](https://openintrostat.github.io/ims-tutorials/01-data/)
+`r emo::ji("spiral_notepad")` [Tutorial 1: Introduction to data](https://openintrostat.github.io/ims-tutorials/01-data/)
 
 `r emo::ji("one")` [Tutorial 1 - Lesson 1: Language of data](https://openintro.shinyapps.io/ims-01-data-01/)
 
