--- a/03-model/10-lesson/03-10-lesson.Rmd
+++ b/03-model/10-lesson/03-10-lesson.Rmd
@@ -554,7 +554,7 @@ question("Which of the following interpretations is invalid?
 
 ## Congratulations!
 
-You have successfully completed Lesson 1 in Tutorial 4: Multiple and Logistic Regression.  
+You have successfully completed Lesson 1 in Tutorial 3: Regression modeling.  
 
 We hope that you've found this tutorial to be illuminating and useful. 
 
@@ -568,7 +568,7 @@ What's next?
 
 `r emo::ji("ledger")` [Full list of tutorials supporting OpenIntro::Introduction to Modern Statistics](https://openintrostat.github.io/ims-tutorials/)
 
-`r emo::ji("spiral_notepad")` [Tutorial 3: Introduction to Linear Models Data](https://openintrostat.github.io/ims-tutorials/03-model/)
+`r emo::ji("spiral_notepad")` [Tutorial 3: Regression modeling](https://openintrostat.github.io/ims-tutorials/03-model/)
 
 `r emo::ji("one")` [Tutorial 3 - Lesson 1: Visualizing two variables](https://openintro.shinyapps.io/ims-03-model-01/)
 
