--- a/05-infer/06-lesson/05-06-lesson.Rmd
+++ b/05-infer/06-lesson/05-06-lesson.Rmd
@@ -817,21 +817,21 @@ question("Which of the following is the correct definition of the p-value of thi
 
 ## Congratulations!
 
-You have successfully completed Lesson 2 in Tutorial 7: Inference for Numerical Responses.  
+You have successfully completed Lesson 2 in Tutorial 5: Statistical inference.  
 
 What's next?
 
 `r emo::ji("ledger")` [Full list of tutorials supporting OpenIntro::Introduction to Modern Statistics](https://openintrostat.github.io/ims-tutorials/)
 
-`r emo::ji("spiral_notepad")` [Tutorial 7: Inference for Numerical Responses](https://openintrostat.github.io/ims-tutorials/05-infer/)
+`r emo::ji("spiral_notepad")` [Tutorial 5: Statistical inference](https://openintrostat.github.io/ims-tutorials/05-infer/)
 
-`r emo::ji("one")` [Tutorial 7 - Lesson 1: Bootstrapping for estimating a parameter](https://openintro.shinyapps.io/ims-05-infer-01/)
+`r emo::ji("one")` [Tutorial 5 - Lesson 1: Bootstrapping for estimating a parameter](https://openintro.shinyapps.io/ims-05-infer-01/)
 
-`r emo::ji("one")` [Tutorial 7 - Lesson 2: Introducing the t-distribution](https://openintro.shinyapps.io/ims-05-infer-02/)
+`r emo::ji("one")` [Tutorial 5 - Lesson 2: Introducing the t-distribution](https://openintro.shinyapps.io/ims-05-infer-02/)
 
-`r emo::ji("one")` [Tutorial 7 - Lesson 3: Inference for difference in two parameters](https://openintro.shinyapps.io/ims-05-infer-03/)
+`r emo::ji("one")` [Tutorial 5 - Lesson 3: Inference for difference in two parameters](https://openintro.shinyapps.io/ims-05-infer-03/)
 
-`r emo::ji("one")` [Tutorial 7 - Lesson 4: Comparing many means](https://openintro.shinyapps.io/ims-05-infer-04/)
+`r emo::ji("one")` [Tutorial 5 - Lesson 4: Comparing many means](https://openintro.shinyapps.io/ims-05-infer-04/)
 
 `r emo::ji("open_book")` [Learn more at Introduction to Modern Statistics](http://openintro-ims.netlify.app/)
 
