--- a/05-infer/08-lesson/05-08-lesson.Rmd
+++ b/05-infer/08-lesson/05-08-lesson.Rmd
@@ -713,7 +713,7 @@ For which of the pairwise comparisons would you conclude that there is a "signif
 
 ## Congratulations!
 
-You have successfully completed Lesson 4 in Tutorial 7: Comparing many means.  
+You have successfully completed Lesson 4 in Tutorial 5: Comparing many means.  
 
 You should now have a very good understanding of statistical inference for numerical data. In this tutorial you have learned about parametric procedures for conducing an analysis of variance (ANOVA). Specifically, you should now be familiar with the concepts of variability within and between groups, the $F$-distribution, and multiple comparison procedures. 
 
@@ -721,14 +721,14 @@ What's next?
 
 `r emo::ji("ledger")` [Full list of tutorials supporting OpenIntro::Introduction to Modern Statistics](https://openintrostat.github.io/ims-tutorials/)
 
-`r emo::ji("spiral_notepad")` [Tutorial 7: Inference for Numerical Responses](https://openintrostat.github.io/ims-tutorials/05-infer/)
+`r emo::ji("spiral_notepad")` [Tutorial 5: Statistical inference](https://openintrostat.github.io/ims-tutorials/05-infer/)
 
-`r emo::ji("one")` [Tutorial 7 - Lesson 1: Bootstrapping for estimating a parameter](https://openintro.shinyapps.io/ims-05-infer-01/)
+`r emo::ji("one")` [Tutorial 5 - Lesson 1: Bootstrapping for estimating a parameter](https://openintro.shinyapps.io/ims-05-infer-01/)
 
-`r emo::ji("two")` [Tutorial 7 - Lesson 2: Introducing the t-distribution](https://openintro.shinyapps.io/ims-05-infer-02/)
+`r emo::ji("two")` [Tutorial 5 - Lesson 2: Introducing the t-distribution](https://openintro.shinyapps.io/ims-05-infer-02/)
 
-`r emo::ji("three")` [Tutorial 7 - Lesson 3: Inference for difference in two parameters](https://openintro.shinyapps.io/ims-05-infer-03/)
+`r emo::ji("three")` [Tutorial 5 - Lesson 3: Inference for difference in two parameters](https://openintro.shinyapps.io/ims-05-infer-03/)
 
-`r emo::ji("four")` [Tutorial 7 - Lesson 4: Comparing many means](https://openintro.shinyapps.io/ims-05-infer-04/)
+`r emo::ji("four")` [Tutorial 5 - Lesson 4: Comparing many means](https://openintro.shinyapps.io/ims-05-infer-04/)
 
 `r emo::ji("open_book")` [Learn more at Introduction to Modern Statistics](http://openintro-ims.netlify.app/)
