--- a/03-model/04-lesson/03-04-lesson.Rmd
+++ b/03-model/04-lesson/03-04-lesson.Rmd
@@ -572,7 +572,7 @@ ggplot(data = bdims, aes(x = hgt, y = wgt)) +
 
 ## Congratulations!
 
-You have successfully completed Lesson 4 in Tutorial 3: Introduction to Linear Models.  
+You have successfully completed Lesson 4 in Tutorial 3: Regression modeling.  
 
 What's next?
 
