--- a/03-model/02-lesson/03-02-lesson.Rmd
+++ b/03-model/02-lesson/03-02-lesson.Rmd
@@ -827,7 +827,7 @@ noise_summary %>%
 
 ## Congratulations!
 
-You have successfully completed Lesson 2 in Tutorial 3: Introduction to Linear Models.  
+You have successfully completed Lesson 2 in Tutorial 3: Regression modeling.  
 
 What's next?
 
