--- a/05-infer/07-lesson/05-07-lesson.Rmd
+++ b/05-infer/07-lesson/05-07-lesson.Rmd
@@ -1069,12 +1069,20 @@ What's next?
 
 `r emo::ji("spiral_notepad")` [Tutorial 5: Statistical inference](https://openintrostat.github.io/ims-tutorials/05-infer/)
 
-`r emo::ji("one")` [Tutorial 5 - Lesson 1: Bootstrapping for estimating a parameter](https://openintro.shinyapps.io/ims-05-infer-01/)
+`r emo::ji("one")` [Tutorial 5 - Lesson 1: Inference for a single proportion](https://openintro.shinyapps.io/ims-05-infer-01/)
 
-`r emo::ji("one")` [Tutorial 5 - Lesson 2: Introducing the t-distribution](https://openintro.shinyapps.io/ims-05-infer-02/)
+`r emo::ji("two")` [Tutorial 5 - Lesson 2: Hypothesis Tests to Compare Proportions](https://openintro.shinyapps.io/ims-05-infer-02/)
 
-`r emo::ji("one")` [Tutorial 5 - Lesson 3: Inference for difference in two parameters](https://openintro.shinyapps.io/ims-05-infer-03/)
+`r emo::ji("three")` [Tutorial 5 - Lesson 3: Chi-squared Test of Independence](https://openintro.shinyapps.io/ims-05-infer-03/)
 
-`r emo::ji("one")` [Tutorial 5 - Lesson 4: Comparing many means](https://openintro.shinyapps.io/ims-05-infer-04/)
+`r emo::ji("four")` [Tutorial 5 - Lesson 4: Chi-squared Goodness of Fit Test](https://openintro.shinyapps.io/ims-05-infer-04/)
+
+`r emo::ji("five")` [Tutorial 5 - Lesson 5: Bootstrapping for estimating a parameter](https://openintro.shinyapps.io/ims-05-infer-05/)
+
+`r emo::ji("six")` [Tutorial 5 - Lesson 6: Introducing the t-distribution](https://openintro.shinyapps.io/ims-05-infer-06/)
+
+`r emo::ji("seven")` [Tutorial 5 - Lesson 7: Inference for difference in two parameters](https://openintro.shinyapps.io/ims-05-infer-07/)
+
+`r emo::ji("eight")` [Tutorial 5 - Lesson 8: Comparing many means](https://openintro.shinyapps.io/ims-05-infer-08/)
 
 `r emo::ji("open_book")` [Learn more at Introduction to Modern Statistics](http://openintro-ims.netlify.app/)
